--- a/components/custom-nav-bar/custom-nav-bar.wxss
+++ b/components/custom-nav-bar/custom-nav-bar.wxss
@@ -5,11 +5,22 @@
   left: 0;
   right: 0;
   z-index: 9999;
-  background-color: #fff;
+  overflow: hidden;
+}
+
+.nav-bar-bg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
 }
 
 .status-bar {
   width: 100%;
+  position: relative;
+  z-index: 1;
 }
 
 .nav-bar-content {
@@ -18,6 +29,7 @@
   justify-content: center;
   padding: 0 30rpx;
   position: relative;
+  z-index: 1;
 }
 
 .nav-back-btn {
